fix: align the scroller directly in the middle (avoid scrollbar offset)

--- a/app/assets/stylesheets/scroller.scss
+++ b/app/assets/stylesheets/scroller.scss
@@ -8,9 +8,9 @@
 #mouse-scroll {
   cursor: pointer;
   position: absolute;
-  left: 50%;
+  left: 44%;
   top: 55vh;
-  transform: translateX(-50%);
+  transform: translateX(-44%);
   z-index: 9999;
   font-size: 1.5em;
 
